--- a/WpfApp3.csproj
+++ b/WpfApp3.csproj
@@ -131,6 +131,8 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MVVM\CRUD\DeletarPessoa.cs" />
+    <Compile Include="MVVM\CRUD\EditarPessoa.cs" />
     <Compile Include="MVVM\CRUD\EditarProduto.cs" />
     <Compile Include="MVVM\CRUD\NovaPessoa.cs" />
     <Compile Include="MVVM\Model\BaseNotifyPropertyChanged.cs" />
