--- a/WpfApp3.csproj
+++ b/WpfApp3.csproj
@@ -104,7 +104,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="MVVM\CRUD\SelecionarPessoaCommand.cs" />
+    <Compile Include="MVVM\ViewModel\Command\PessoaCommand\SelecionarPessoaCommand.cs" />
     <Compile Include="Util\Validacao.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -121,11 +121,11 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="MVVM\View\CadastrarPessoa.xaml">
+    <Page Include="MVVM\View\PessoaView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MVVM\View\CadastroProduto.xaml">
+    <Page Include="MVVM\View\ProdutoView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -139,27 +139,27 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MVVM\CRUD\DeletarPessoa.cs" />
-    <Compile Include="MVVM\CRUD\EditarPessoa.cs" />
-    <Compile Include="MVVM\CRUD\EditarProduto.cs" />
-    <Compile Include="MVVM\CRUD\NovaPessoa.cs" />
-    <Compile Include="MVVM\CRUD\PesquisarPessoa.cs" />
-    <Compile Include="MVVM\CRUD\PesquisarProduto.cs" />
-    <Compile Include="MVVM\Model\BaseNotifyPropertyChanged.cs" />
+    <Compile Include="MVVM\ViewModel\Command\PessoaCommand\DeletarPessoaCommand.cs" />
+    <Compile Include="MVVM\ViewModel\Command\PessoaCommand\EditarPessoaCommand.cs" />
+    <Compile Include="MVVM\ViewModel\Command\ProdutoCommand\EditarProdutoCommand.cs" />
+    <Compile Include="MVVM\ViewModel\Command\PessoaCommand\NovaPessoaCommand.cs" />
+    <Compile Include="MVVM\ViewModel\Command\PessoaCommand\PesquisarPessoaCommand.cs" />
+    <Compile Include="MVVM\ViewModel\Command\ProdutoCommand\PesquisarProdutoCommand.cs" />
+    <Compile Include="core\BaseNotifyPropertyChanged.cs" />
     <Compile Include="MVVM\Model\Pedido.cs" />
     <Compile Include="MVVM\Model\Pessoa.cs" />
     <Compile Include="MVVM\Model\Produto.cs" />
-    <Compile Include="MVVM\ViewModel\CadastroPessoaViewModel.cs" />
+    <Compile Include="MVVM\ViewModel\PessoaViewModel.cs" />
     <Compile Include="MVVM\ViewModel\PedidoViewModel.cs" />
     <Compile Include="MVVM\ViewModel\ProdutoViewModel.cs" />
-    <Compile Include="MVVM\CRUD\DeletarProduto.cs" />
+    <Compile Include="MVVM\ViewModel\Command\ProdutoCommand\DeletarProdutoCommand.cs" />
     <Compile Include="MVVM\ViewModel\MainViewModel.cs" />
-    <Compile Include="MVVM\CRUD\NovoProduto.cs" />
-    <Compile Include="MVVM\View\CadastrarPessoa.xaml.cs">
-      <DependentUpon>CadastrarPessoa.xaml</DependentUpon>
+    <Compile Include="MVVM\ViewModel\Command\ProdutoCommand\NovoProdutoCommand.cs" />
+    <Compile Include="MVVM\View\PessoaView.xaml.cs">
+      <DependentUpon>PessoaView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MVVM\View\CadastroProduto.xaml.cs">
-      <DependentUpon>CadastroProduto.xaml</DependentUpon>
+    <Compile Include="MVVM\View\ProdutoView.xaml.cs">
+      <DependentUpon>ProdutoView.xaml</DependentUpon>
     </Compile>
     <Compile Include="MVVM\View\PedidoView.xaml.cs">
       <DependentUpon>PedidoView.xaml</DependentUpon>
@@ -202,6 +202,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Database\" />
+    <Folder Include="MVVM\ViewModel\Command\PedidoCommand\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include=".gitignore" />
