--- a/WpfApp3.csproj
+++ b/WpfApp3.csproj
@@ -104,6 +104,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="MVVM\Command\PedidoCommand\IncluirPedidoCommand.cs" />
     <Compile Include="MVVM\Command\PedidoCommand\FiltrarStatusPedidoCommand.cs" />
     <Compile Include="MVVM\Command\PessoaCommand\EditarPessoaCommand.cs" />
     <Compile Include="MVVM\Command\PessoaCommand\NovaPessoaCommand.cs" />
